Major code-cleanup to make the moth boss code more readable.  Edited the level to include a clear spot in the middle where the player can hide behind to keep from getting blown off the level.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -6,61 +6,62 @@
 	"background_palette": "forest_graveyard_shift",
 	"character": [
 		{
-			"_addr": "10C0DEA0",
+			"_uuid": "c7b964590e8c4667811c67f2759d35bd",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_40509f8",
 			"type": "forest_branch4",
 			"x": 512,
 			"y": -864
 		},
 		{
-			"_addr": "10C0E2E8",
+			"_uuid": "996a093e68ac49a6b361968fd1b98b56",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_66d17ad7",
 			"type": "forest_branch1",
 			"x": 700,
 			"y": -950
 		},
 		{
-			"_addr": "10C0E730",
+			"_uuid": "9a4bffaee5754143941f64c30cafd39f",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_6f4b94ec",
 			"type": "forest_branch6",
 			"x": 416,
 			"y": -896
 		},
 		{
-			"_addr": "10C0EB78",
+			"_uuid": "60fc7b6a838340d28749fd5776012a8f",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5fe3fc1f",
 			"type": "forest_branch5",
 			"x": 759,
 			"y": -900
 		},
 		{
-			"_addr": "10299AE0",
-			"current_frame": "normal",
-			"custom": 1,
-			"is_human": 1,
+			"_uuid": "18771fb8855746139d498acb333f49d8",
+			"current_frame": "freefall",
+			"custom": true,
+			"is_human": true,
 			"label": "_70885ff4",
 			"objects_destroyed": {
 				"level": "moth-boss.cfg",
 				"objects": []
 			},
 			"type": "frogatto_playable",
-			"x": 123,
-			"y": -1157
+			"velocity_y": 600.0,
+			"x": 80,
+			"y": -1212
 		},
 		{
-			"_addr": "10C11A90",
+			"_uuid": "89e9851e8bab46729ae11e75db6e5f7b",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1f249997",
 			"property_data": {
 				"_x2_bound": 1712,
@@ -74,10 +75,10 @@
 			"y": 448
 		},
 		{
-			"_addr": "10C11ED8",
-			"always_active": 1,
+			"_uuid": "4497bbcdd92247a886d2e1336c51243a",
+			"always_active": true,
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "berd",
 			"on_create": "[
 							set(level.player.control_lock, []),
@@ -99,9 +100,9 @@
 			"y": -1184
 		},
 		{
-			"_addr": "10C12320",
+			"_uuid": "32151d71af2e45ed904552482c64ea04",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "script_controller",
 			"on_script2": "[begin_skip_dialog_sequence(),
 							speech_dialog(
@@ -151,111 +152,111 @@
 			"y": -544
 		},
 		{
-			"_addr": "10C12768",
+			"_uuid": "d2f3030080924f76b4aee256edcd3ca6",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_3128c85",
 			"type": "forest_branch5",
 			"x": 928,
 			"y": -1120
 		},
 		{
-			"_addr": "10C12BB0",
+			"_uuid": "01c010223d354708a1870bb8610c23fa",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_2600daa",
 			"type": "forest_branch_light2",
-			"x": 736,
-			"y": -800
+			"x": 739,
+			"y": -836
 		},
 		{
-			"_addr": "10C12FF8",
+			"_uuid": "ae23f6462397462399aaea50112ea3a0",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_574ce5e6",
 			"type": "forest_branch6",
-			"upside_down": 1,
+			"upside_down": true,
 			"x": 800,
 			"y": -1056
 		},
 		{
-			"_addr": "10C13440",
+			"_uuid": "5b6a963c7db646639953c3abd8838b25",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_4c0219c1",
 			"type": "forest_branch1",
 			"x": 565,
 			"y": -1096
 		},
 		{
-			"_addr": "10C13888",
+			"_uuid": "e1d066c52ca645cbacd88ed881d01e3b",
 			"current_frame": "normal",
-			"custom": 1,
-			"face_right": 0,
+			"custom": true,
+			"face_right": false,
 			"label": "_72859260",
 			"type": "forest_branch1",
 			"x": 840,
 			"y": -1146
 		},
 		{
-			"_addr": "10C13CD0",
+			"_uuid": "2a8b9b7bafdb42a29923bce08bb081df",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_75958eac",
 			"type": "forest_branch4",
 			"x": 480,
 			"y": -1024
 		},
 		{
-			"_addr": "10C14118",
+			"_uuid": "6e37f4e93ff6487d95592da44a81b8a0",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_966d4c5",
 			"type": "ivy_foreground1",
-			"x": 319,
-			"y": -398
+			"x": 317,
+			"y": -342
 		},
 		{
-			"_addr": "10C14560",
+			"_uuid": "fb7fc0459abb4051981ee1e9f8143f39",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_12373ce0",
 			"type": "rock_background_cubic1",
-			"x": 565,
-			"y": -392
+			"x": 653,
+			"y": -307
 		},
 		{
-			"_addr": "10C149A8",
+			"_uuid": "38e0a6c9aaa64c299ea99f45a54a33e5",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_27d89e02",
 			"type": "ivy_foreground1",
-			"x": 875,
-			"y": -388
+			"x": 873,
+			"y": -332
 		},
 		{
-			"_addr": "10C14DF0",
+			"_uuid": "6158b64e34e9455b9ce71787f4af12f9",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_fc18017",
 			"type": "ivy_foreground2",
-			"x": 704,
-			"y": -407
+			"x": 702,
+			"y": -351
 		},
 		{
-			"_addr": "10C15238",
+			"_uuid": "f64c3191a2764bb088c83854742a1c15",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_7839971a",
 			"type": "rock_foreground_forest3",
-			"x": 526,
-			"y": -334
+			"x": 524,
+			"y": -278
 		},
 		{
-			"_addr": "10C15680",
+			"_uuid": "9f103465b7fa4f758982e58ee168937c",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "camera1",
 			"property_data": {
 				"average_path": true,
@@ -278,9 +279,9 @@
 			"y": -480
 		},
 		{
-			"_addr": "10C15AC8",
+			"_uuid": "82aab51c401f487da057f50e7f5674d1",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "camera2",
 			"property_data": {
 				"average_path": true,
@@ -302,9 +303,9 @@
 			"y": -768
 		},
 		{
-			"_addr": "10C15F10",
+			"_uuid": "13df1d621c034fef9b5e28eea0f12ee4",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "begin_fight_controller",
 			"on_postfight_outro": "[
 									begin_skip_dialog_sequence(),
@@ -324,9 +325,9 @@
 			"y": -448
 		},
 		{
-			"_addr": "10C16358",
+			"_uuid": "7517bb99c7124da59b402b5e65058f6c",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_1ae9096d",
 			"property_data": {
 				"_x2_bound": 1168,
@@ -339,61 +340,61 @@
 			"y": -832
 		},
 		{
-			"_addr": "10C1F930",
+			"_uuid": "656aeb6f69fa40f08b82a587ff0029b7",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5373",
 			"type": "forest_branch_light3",
-			"x": 844,
-			"y": -570
+			"x": 812,
+			"y": -631
 		},
 		{
-			"_addr": "10C21B70",
+			"_uuid": "6779e40f4bf84f2dacbcc7f0541b3694",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_550a",
 			"type": "forest_branch_light4",
-			"x": 376,
-			"y": -660
+			"x": 387,
+			"y": -719
 		},
 		{
-			"_addr": "10C23520",
+			"_uuid": "dec55427791041e28656291c69f8361e",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_6407",
 			"type": "forest_branch_light1",
-			"x": 854,
-			"y": -726
+			"x": 856,
+			"y": -765
 		},
 		{
-			"_addr": "10C25318",
+			"_uuid": "2836ca17258e4241a047d6222718cc06",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_5464",
 			"type": "forest_foliage_tuft2",
 			"x": 896,
 			"y": -512
 		},
 		{
-			"_addr": "10C26438",
+			"_uuid": "f0967aff459d47858314f03956e09255",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_50d3",
 			"type": "forest_foliage_tuft4",
 			"x": 480,
 			"y": -608
 		},
 		{
-			"_addr": "10C26CC8",
+			"_uuid": "4b6c0275e0ad4510a97510c4ba65524c",
 			"current_frame": "normal",
-			"custom": 1,
+			"custom": true,
 			"label": "_856",
 			"type": "forest_foliage_tuft3",
-			"x": 800,
-			"y": -736
+			"x": 783,
+			"y": -769
 		}
 	],
-	"dimensions": [-128,-1408,1599,-97],
+	"dimensions": [-128,-1408,1599,-33],
 	"id": "moth-boss.cfg",
 	"music": "TheGrotto.ogg",
 	"palettes": ["forest_graveyard_shift"],
@@ -403,41 +404,10 @@
 	"serialized_objects": {
 		"character": []
 	},
-	"set_screen_resolution_on_entry": 0,
+	"set_screen_resolution_on_entry": false,
 	"tile_map": [
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -468,17 +438,18 @@
 ,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
-,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs
+,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs
 ,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs
-,,,,,,,,,,,,,,lfs,lfs,lfs,,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,lfs,,,,lfs,lfs
 ,,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,lfs,,lfs
+,
 ,,,,,,,,,,,,,,,,,,,,,,lfs,lfs
-,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,,lfs,lfs
-,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs
+,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs,,lfs,lfs
 ,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs,lfs
 ,,,,,,,,,,,,,,,,,lfs,lfs,lfs,lfs
 ,,,,,,,,,,,,,,,,,lfs,lfs,lfs
 ,,,,,,,,,,,,,,,,,lfs,lfs
+,
+,
 ,
 ,
 ,
@@ -530,7 +501,7 @@
 			"variations": "",
 			"x": 0,
 			"x_speed": 103,
-			"y": -1504,
+			"y": -1536,
 			"y_speed": 103,
 			"zorder": "background_parallax_forest_leaves"
 		},
@@ -538,9 +509,9 @@
 			"tiles": ",
 ,
 ,
-,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg
-,,,,,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg
-,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
+,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
+,,,,,,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg
 ,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -592,10 +563,10 @@
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,tnk,tnk
 ,,,,,,,,,,,,,,,,,,,,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,,,,,,,,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
-,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk
 ,,,,,,,,,,,,,,,,,,,,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk,,,,,,,,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
+,,,,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk
 ,,,,,,,,,,,,,,,,,,,,tnk,tnk
 ,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk,tnk
 ,,,,,,,,,,,,,,,,,tnk,tnk,tnk,tnk,tnk
@@ -646,48 +617,19 @@
 ,
 ,
 ,
+,
+,
 ,",
 			"unique_tiles": ",tnk",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": -800,
+			"y": -864,
 			"y_speed": 100,
 			"zorder": "forest_tree_trunks"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -695,6 +637,16 @@
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "wooden_scaffolding_background"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
+			"y": 0,
+			"y_speed": 100,
+			"zorder": "rail_tracks"
 		},
 		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,lfm,lfm
@@ -718,14 +670,15 @@
 ,,,,,,,,lfm,lfm,,,lfm,lfm,lfm,,,lfm,lfm,lfm,lfm,,lfm,,,lfm,lfm,,lfm,lfm,lfm,lfm
 ,,,,,,,,lfm,lfm,,,lfm,lfm,lfm,,,lfm,lfm,lfm,,,lfm,,,lfm,lfm,,lfm,lfm,lfm,lfm,lfm
 ,,,,,,,,lfm,,,,,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,,lfm,,,lfm,,lfm,lfm,lfm,lfm
-,,,,,,,,,,,,,lfm,,lfm,lfm,,,lfm,lfm,lfm,,lfm,lfm,,,,lfm,lfm,,lfm
-,,,,,,,,,,,,,lfm,,lfm,lfm,lfm,,,,,,lfm,lfm,,,,lfm
-,,,,,,,,,,,,,,,,,lfm,,,,,lfm,lfm
+,,,,,,,,,,,,,lfm,,lfm,lfm,,,lfm,lfm,lfm,,lfm,lfm,,,,lfm
+,,,,,,,,,,,,,lfm,,lfm,lfm,lfm,,,,,,lfm,lfm
 ,,,,,,,,,,,,,,,,,,,,,,lfm,lfm
+,
 ,,,,,,,,,,,,,,,,lfm,lfm,lfm,lfm,,,lfm
-,,,,,,,,,,,,,,,lfm,lfm,lfm,lfm,lfm,lfm
 ,,,,,,,,,,,,,,,,lfm,lfm,lfm,lfm,lfm
 ,,,,,,,,,,,,,,,,,,lfm
+,
+,
 ,
 ,
 ,
@@ -780,43 +733,12 @@
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": -1504,
+			"y": -1536,
 			"y_speed": 100,
 			"zorder": "forest_leaves_background"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -826,38 +748,7 @@
 			"zorder": "foliage_background"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -867,38 +758,7 @@
 			"zorder": "npcs"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -931,7 +791,8 @@
 ,
 ,
 ,,,,,,,,,,,,,,,,,lef,lef,lef
-,,,,,,,,,,,,,,,,,lef,lef
+,
+,
 ,
 ,
 ,
@@ -988,63 +849,22 @@
 			"variations": "",
 			"x": 0,
 			"x_speed": 98,
-			"y": -1408,
+			"y": -1440,
 			"y_speed": 98,
 			"zorder": "forest_leaves_foreground"
 		},
 		{
-			"tiles": ",,,,,,,,,,,,,,,,,,fug,fug,fug,,,fug,fug,,,,,,,,,,fug,fug,fug
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
-			"unique_tiles": ",fug",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": -320,
-			"y_speed": 100,
-			"zorder": "foliage_foreground"
-		},
-		{
 			"tiles": ",
+,
+,
+,
+,
+,
+,
+,
+,
+,
+,
 ,
 ,
 ,
@@ -1080,43 +900,22 @@
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
+			"y": -320,
+			"y_speed": 100,
+			"zorder": "foliage_foreground"
+		},
+		{
+			"tiles": "",
+			"unique_tiles": "",
+			"variations": "",
+			"x": 0,
+			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
 			"zorder": "foreground_parallax_objects"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,",
+			"tiles": "",
 			"unique_tiles": "",
 			"variations": "",
 			"x": 0,
@@ -1127,7 +926,7 @@
 		}
 	],
 	"title": "",
-	"touch_controls": 1,
+	"touch_controls": true,
 	"vars": {
 	},
 	"version": "1.4",
