--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -90,12 +90,35 @@ properties: {
 #---- general target-seeking ----#
 	movement_speed: "if(_state in ['diving_towards_player'], 125, 75)",
 
-	seek_position: "		[if(_state = 'diving_towards_player', if(not animation in (['dive'] + uninterruptible_animations), animation('dive'))),
-								if(midpoint_x < _target_x, [try_facing(1),add(velocity_x, movement_speed)],[try_facing(-1),add(velocity_x,-movement_speed)] ),
-								if(midpoint_y < _target_y, add(velocity_y, movement_speed),add(velocity_y,-movement_speed) ),
-								if(is_at_target, change_action)]",
+	seek_position: "[
+		if(_state = 'diving_towards_player',
+			if(not animation in (['dive'] + uninterruptible_animations),
+				animation('dive')
+			)
+		),
+		if(midpoint_x < _target_x,
+			[
+				try_facing(1),
+				add(velocity_x, movement_speed),
+			],[
+				try_facing(-1),
+				add(velocity_x,-movement_speed),
+			]
+		),
+		if(midpoint_y < _target_y,
+			add(velocity_y, movement_speed),
+			add(velocity_y,-movement_speed)
+		),
+		if(is_at_target, change_action)
+	]",
 								
-	is_at_target: "if((abs(midpoint_x - _target_x) < trigger_distance) and (abs(midpoint_y - _target_y) < trigger_distance), true, false) where trigger_distance = max(10.0, current_speed/10.0), where current_speed = abs(hypot(velocity_x, velocity_y))",
+	is_at_target: "if(
+			(abs(midpoint_x - _target_x) < trigger_distance)
+			and
+			(abs(midpoint_y - _target_y) < trigger_distance),
+		true,
+		false
+	) where trigger_distance = max(10.0, current_speed/10.0), where current_speed = abs(hypot(velocity_x, velocity_y))",
 
 
 									
@@ -104,15 +127,45 @@ properties: {
 	choose_dive_recovery_pos: "[set(_target_x, if(velocity_x < 0, _x_bound, _x2_bound)), set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)]",
 	
 #---- wind gust ----#
-	choose_windgust_target_pos: "if(1d2=2,	[	set(_target_x, _x_bound), 
-												set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)],
-											[	set(_target_x, _x2_bound), 
-												set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)])",
+	choose_windgust_target_pos: "if(1d2=2,
+		[
+			set(_target_x, _x_bound), 
+			set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)
+		],[
+			set(_target_x, _x2_bound), 
+			set(_target_y, _y_bound + (_y2_bound - _y_bound)/2)
+		]
+	)",
+
 	do_wind_gust: "if(not animation in (['flapfast'] + uninterruptible_animations), animation('flapfast'))",
 	wind_gust: "[ schedule_next_action,
-				spawn('current_generator',midpoint_x,midpoint_y, {facing:1, invisible:true, _x_bound:_x_bound-96, _x2_bound:_x2_bound+96, _y_bound:_y_bound-96, _y2_bound:_y2_bound+512, strength:5000, current_vel_x:if(mid_x > _x_bound + (_x2_bound - _x_bound)/2, -800, 800), current_vel_y:0, always_active:true},
-[sound_falloff('moth-boss-wind1.ogg',500,1.0),schedule(timeout,[stop_sound('moth-boss-wind1.ogg'),die()])]),
-				map(range(number_of_wind_gust_anims), schedule(value*3,spawn('wind_gust',gust_mid_x-gust_width/2+1d(gust_width), gust_mid_y-gust_height/2+1d(gust_height), {facing:gust_direction, upside_down: if(1d2=2,-1,1), animation:'normal'+(1d3-1)}) ))
+				spawn('current_generator',midpoint_x,midpoint_y, {
+					facing:1,
+					invisible:true,
+					_x_bound:_x_bound-96,
+					_x2_bound:_x2_bound+96,
+					_y_bound:_y_bound-96,
+					_y2_bound:_y2_bound+512,
+					strength:5000,
+					current_vel_x: if(mid_x > _x_bound + (_x2_bound - _x_bound)/2, -800, 800),
+					current_vel_y:0,
+					always_active:true
+				},[
+					sound_falloff('moth-boss-wind1.ogg',500,1.0),
+					schedule(timeout, [stop_sound('moth-boss-wind1.ogg'),die()])
+				]),
+				map(
+					range(number_of_wind_gust_anims),
+					schedule(value*3, 
+						spawn('wind_gust',
+							gust_mid_x-gust_width/2+1d(gust_width),
+							gust_mid_y-gust_height/2+1d(gust_height),
+						{
+							facing:gust_direction,
+							upside_down: if(1d2=2,-1,1), animation:'normal'+(1d3-1)
+						})
+					)
+				)
 			 ]	where number_of_wind_gust_anims = timeout/3,
 			 	where gust_mid_x = (_x_bound+_x2_bound)/2,
 			 	where gust_mid_y = (_y_bound+_y2_bound + 512-96)/2,
@@ -126,38 +179,66 @@ properties: {
 #---- lay egg ----#
 	should_lay_egg: "can_lay_egg_at_current_pos and (size(filter(level.chars, value.type in ['moth_boss.egg','moth_small'])) < 5)",
 	lay_egg: "[	
-					sound('moth-boss-lay-egg'+1d5+'.wav'), schedule(timeout/2, 
-						if(higher_difficulty,
-							[spawn_egg(-300), spawn_egg(0), spawn_egg(300)],
-							[spawn_egg(-200), spawn_egg(200)]
-						)
-					),
-					schedule_next_action
-				] where spawn_egg = def(int vel_x) spawn('moth_boss.egg',mid_x,mid_y,{time_spat:level.cycle, animation:'on_back', velocity_x: vel_x})",
+		sound('moth-boss-lay-egg'+1d5+'.wav'), schedule(timeout/2, 
+			if(higher_difficulty,
+				[spawn_egg(-300), spawn_egg(0), spawn_egg(300)],
+				[spawn_egg(-200), spawn_egg(200)]
+			)
+		),
+		schedule_next_action
+	] where spawn_egg = def(int vel_x) spawn('moth_boss.egg', mid_x, mid_y, {
+		time_spat:level.cycle,
+		animation:'on_back',
+		velocity_x: vel_x,
+	})",
 	
 	can_lay_egg_at_current_pos: "if( floor_height(me.mid_x, me.mid_y), true, false)",
 	
 	
 	
 #---- fire shot ----#
-	prepare_shot:	"[spawn('moth_boss.warning', midpoint_x+32*facing, midpoint_y - 60, {facing:facing, parent:me, relative_x: 32, relative_y: -60, zorder:lib.zorder.get('in_front_of_everything')}),
-										sound_falloff('moth-boss-shot'+1d7+'.wav'),
-										schedule(30, bind_command(def() launch_shot)), 
-										schedule_next_action]",
-	launch_shot: "[spawn('moth_boss.flash', midpoint_x+16*facing, midpoint_y - 30, 1),
-					spawn('moth_boss.shot',midpoint_x+16*facing, midpoint_y - 30,
-					{zorder: lib.zorder.get('in_front_of_everything'),
-					velocity_x: max(-300,min(300,((1000*(level.player.x-x))/abs(level.player.y-y)) / 2)),
-					velocity_y: max(-300,min(300,((1000*(level.player.y-y))/abs(level.player.x-x)) / 2) )})]",
+	prepare_shot:	"[
+		spawn('moth_boss.warning', midpoint_x+32*facing, midpoint_y - 60, {
+			facing:facing,
+			parent:me,
+			relative_x: 32,
+			relative_y: -60,
+			zorder:lib.zorder.get('in_front_of_everything')
+		}),
+		sound_falloff('moth-boss-shot'+1d7+'.wav'),
+		schedule(30, bind_command(def() launch_shot)), 
+		schedule_next_action
+	]",
+		
+	launch_shot: "[
+		spawn('moth_boss.flash', midpoint_x+16*facing, midpoint_y - 30, 1),
+		spawn('moth_boss.shot',midpoint_x+16*facing, midpoint_y - 30, {
+			zorder: lib.zorder.get('in_front_of_everything'),
+			velocity_x: max(-300,min(300,((1000*(level.player.x-x))/abs(level.player.y-y)) / 2)),
+			velocity_y: max(-300,min(300,((1000*(level.player.y-y))/abs(level.player.x-x)) / 2) )
+		})
+	]",
 					
 #---- fire homing shot ----#
-	prepare_homing_shot:	"[spawn('moth_boss.homing_shot_warning', midpoint_x+32*facing, midpoint_y - 60, {facing:facing, parent:me, relative_x: 32, relative_y: -60, zorder:lib.zorder.get('in_front_of_everything')}),
-										sound_falloff('homing.wav'),
-										schedule(30, bind_command(def() launch_homing_shot)), 
-										schedule_next_action]",
-	launch_homing_shot: "[spawn('moth_boss.homing_shot_flash', midpoint_x+16*facing, midpoint_y - 30, 1),
-					spawn('moth_boss.homing_shot',midpoint_x+16*facing, midpoint_y - 30, 
-					{zorder: lib.zorder.get('in_front_of_everything')})]",
+	prepare_homing_shot:	"[
+		spawn('moth_boss.homing_shot_warning', midpoint_x+32*facing, midpoint_y - 60, {
+			facing:facing,
+			parent:me,
+			relative_x: 32,
+			relative_y: -60,
+			zorder:lib.zorder.get('in_front_of_everything'),
+		}),
+		sound_falloff('homing.wav'),
+		schedule(30, bind_command(def() launch_homing_shot)), 
+		schedule_next_action,
+	]",
+										
+	launch_homing_shot: "[
+		spawn('moth_boss.homing_shot_flash', midpoint_x+16*facing, midpoint_y - 30, 1),
+		spawn('moth_boss.homing_shot',midpoint_x+16*facing, midpoint_y - 30, {
+			zorder: lib.zorder.get('in_front_of_everything')
+		})
+	]",
 	
 	
 	
@@ -185,8 +266,10 @@ on_turn: "if(cycle-_last_turned > 30 and (not animation in ['turn']),[set(_last_
 on_leave_turn_anim: "set(facing, -facing)",
 on_end_anim: "animation('fly')",
 
-## boss swaps randomly between several states;  egg-laying, flapping-to-make-wind, and diving, with an additional "cruising" mode for moving to a goal
-## each state has a goal position; randomly placed in the air.  The bug flies to the position, and enters one of the attack states.
+/*
+	The boss swaps randomly between several states;  egg-laying, flapping-to-make-wind, and diving, with an additional "cruising" mode for moving to a goal.  Each state has a goal position; randomly placed in the air.  The boss flies to the position, and enters one of the attack states.
+*/
+
 on_process: "[if(animation = 'fly',	switch(_state,
 												'moving',						seek_position,
 												'egg-laying',					null,
@@ -514,10 +597,25 @@ object_type: [
 		},
 		solid_area: [16,16,31,31],
 
-		on_process_on_back: "[proto_event('throwable_projectile','process_on_back'), if(_on_back_count = (on_back_duration*3)/4, sound_falloff('egg-hatch-squishy.wav'))]",
+		on_process_on_back: "[
+			proto_event('throwable_projectile','process_on_back'),
+			if(_on_back_count = (on_back_duration*3)/4,
+				sound_falloff('egg-hatch-squishy.wav')
+			)
+		]",
 
-		on_return_to_normal: "[sound_falloff('egg-hatch-crunch'+1d3+'.wav'),spawn('moth_small',mid_x,y,{facing:facing, _x_bound:mid_x-200, _x2_bound:mid_x+200, _desired_height:y-150-1d100}, [set(child.always_active,true)]),
-								die()]",
+		on_return_to_normal: "[
+			sound_falloff('egg-hatch-crunch'+1d3+'.wav'),
+			spawn('moth_small',mid_x,y,{
+				facing:facing,
+				_x_bound:mid_x-200,
+				_x2_bound:mid_x+200,
+				_desired_height:y-150-1d100
+			},[
+				set(child.always_active,true)
+			]),
+			die()
+		]",
 		animation: [
 		{
 			"@base": true,
