Adjust the moth boss to some wind settings that clearly and easily outdo the player's ability to accelerate.

--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -146,7 +146,7 @@ properties: {
 					_x2_bound:_x2_bound+96,
 					_y_bound:_y_bound-96,
 					_y2_bound:_y2_bound+512,
-					strength:5000,
+					strength:10000,
 					current_vel_x: if(mid_x > _x_bound + (_x2_bound - _x_bound)/2, -800, 800),
 					current_vel_y:0,
 					always_active:true
@@ -270,15 +270,20 @@ on_end_anim: "animation('fly')",
 	The boss swaps randomly between several states;  egg-laying, flapping-to-make-wind, and diving, with an additional "cruising" mode for moving to a goal.  Each state has a goal position; randomly placed in the air.  The boss flies to the position, and enters one of the attack states.
 */
 
-on_process: "[if(animation = 'fly',	switch(_state,
-												'moving',						seek_position,
-												'egg-laying',					null,
-												'moving_to_prep_windgust',		seek_position,
-												'windgust',						do_wind_gust,
-												'diving_towards_player',		seek_position,
-												'recover_from_dive',			seek_position,
-												null)),
-				set(rotate, sin(cycle*7) * 2.0)]",
+on_process: "[
+	if(animation = 'fly',
+		switch(_state,
+			'moving',						seek_position,
+			'egg-laying',					null,
+			'moving_to_prep_windgust',		seek_position,
+			'windgust',						do_wind_gust,
+			'diving_towards_player',		seek_position,
+			'recover_from_dive',			seek_position,
+			null
+		)
+	),
+	set(rotate, sin(cycle*7) * 2.0)
+]",
 
 editor_info: {
 	category: "enemies, forest",
