Tweaks to the pre-fight moth boss cutscene.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -108,16 +108,27 @@
 							speech_dialog(
 								level.player,	[~Ouch.~],
 												set(level.player.facing, sign(berd.mid_x - level.player.mid_x)),
+												[~...~],
+												[~I want my money back.~],
+								berd,			[~....~],
 												set(level.player.animation, 'emote_geez'),
-												[~Okay, that sucked.~],
+								level.player,	[~You doing alright there?~],
 												set(level.player.animation, 'emote_confused'),
-												[~But hey, we're all in one piece, right?~],
+												[~...Berd?~],
 												set(berd.animation, 'stand_back_up'),
 								berd,			[~After a fashion, yes.~],
 												set(berd.animation, 'emote_angry'),
-												[~So what now?~],
+												[~Remind me never to talk myself\\ninto a tomfool plan like <em>that</em> again.~],
+												set(berd.animation, 'emote_angry'),
+												[~So where to next?~],
 												set(level.player.animation, 'emote_confused'),
-								level.player,	[~Uhh... for lack of a better plan....\\nWhy don't you go get a rope?~],
+								level.player,	[~Nowhere.\\nI'm stuck up here.~],
+												set(berd.animation, 'emote_confused'),
+								berd,			[~Oh?  <em>Oh.</em>  Yes you are.\\nThis is a pillar, isn't it?~],
+												set(level.player.animation, 'emote_geez'),
+								level.player,	[~Yeah, I'm not keen on <em>another</em> attempt at flight,\\nso quickly after our first...~],
+												set(level.player.animation, 'emote_confused'),
+												[~Uhh... for lack of a better plan....\\nWhy don't you go get a rope?~],
 												set(berd.animation, 'emote_confused'),
 								berd,			[~Where do I find one of those?~],
 												set(level.player.animation, 'emote_geez'),
