Further cutscene updates - wired in some walking, and added some additional dialogue.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -141,17 +141,50 @@
 										)] where berd = get_object_or_die(level,'berd')",
 			"on_script3": "[berd.fly_to([{x: -250, y:-1400}], false, def() -> commands [set(berd.paused, true)]),
 							schedule(120, fire_event(me,'script4'))]  where berd = (obj berd_npc <- get_object_or_die(level,'berd'))",
-			"on_script4": "[set(level.player.facing, 1),
+							
+			"on_script4": "[
+				frogatto.scripted_move_to_x(600, 1, def()->commands fire_event(me, 'script5') )
+			] where frogatto = (obj frogatto_playable <- level.player)",
+
+			"on_script5": "[set(level.player.facing, 1),
 							speech_dialog(
 												set(level.player.animation, 'emote_confused'),
-								level.player,	[~Welp.~],
+								level.player,	[~So yeah, uh...~],
 												set(level.player.animation, 'emote_geez'),
-												[~This is going to be a pretty tedious affair.~],
-											),schedule(60, fire_event(me,'script5'))]",
-			"on_script5": "[	set(level.player.animation, 'emote_oh'),
+												[~I wish I'd brought a book.~],
+											),schedule(60, fire_event(me,'script6'))]",
+			"on_script6": "[
+				frogatto.scripted_move_to_x(500, -1, def()->commands fire_event(me, 'script7') )
+			] where frogatto = (obj frogatto_playable <- level.player)",
+
+			"on_script7": "[set(level.player.facing, -1),
+							speech_dialog(
+												set(level.player.animation, 'emote_confused'),
+								level.player,	[~Man, I might be stuck here for <em>hours</em>.~],
+												set(level.player.animation, 'emote_geez'),
+												[~Maybe I can...~],
+												set(frogatto.animation, 'hurt'),
+												set(frogatto.velocity_y, -500),
+												set(frogatto.velocity_x, 150*facing),
+												set(level.zoom, 3),
+
+											),schedule(60, fire_event(me,'script8'))
+			] where frogatto = (obj frogatto_playable <- level.player)",
+											
+											
+			"on_script8": "[set(level.player.facing, 1),
+							speech_dialog(
+												set(level.player.animation, 'emote_oh'),
+								level.player,	[~We jinxed it.\\nDidn't we?~],
+											),schedule(60, fire_event(me,'script9'))]",
+
+
+			"on_script9": "[
+								set(level.zoom, 1),
 								spawn('moth_boss.perched', 680, -1024, 1, [schedule(300, die())]),
 								fire_event(get_object_or_die(level,'camera1'),'triggered'),
-								transient_speech_dialog(level.player,	[~Whoa, what the hell ...~])]",
+								transient_speech_dialog(level.player,	[~Yup.~])
+							]",
 			"property_data": {
 				"_x2_bound": 214,
 				"_x_bound": -36,
