Swapped out the clixx npc for ringlark, since it has better graphics.

--- a/data/level/Forest/rocky-road-house-inside.cfg
+++ b/data/level/Forest/rocky-road-house-inside.cfg
@@ -11,9 +11,9 @@
 			"on_talk": "speech_dialog(self, [~Hello there.~],
 						   level.player, [~You don't have real dialogue yet, huh?~],
 						   self,         [~No, sir, this is a placeholder.~])",
-			"type": "clixx_npc",
-			"x": -224,
-			"y": 153
+			"type": "ringlark_npc",
+			"x": -256,
+			"y": 93
 		},
 		{
 			"_uuid": "7acf3e0e33ab4f83ba49e05977b49ef4",
