Minor edits to the moth boss level.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -141,11 +141,9 @@
 										)] where berd = get_object_or_die(level,'berd')",
 			"on_script3": "[berd.fly_to([{x: -250, y:-1400}], false, def() -> commands [set(berd.paused, true)]),
 							schedule(120, fire_event(me,'script4'))]  where berd = (obj berd_npc <- get_object_or_die(level,'berd'))",
-							
 			"on_script4": "[
 				frogatto.scripted_move_to_x(600, 1, def()->commands fire_event(me, 'script5') )
 			] where frogatto = (obj frogatto_playable <- level.player)",
-
 			"on_script5": "[set(level.player.facing, 1),
 							speech_dialog(
 												set(level.player.animation, 'emote_confused'),
@@ -156,7 +154,6 @@
 			"on_script6": "[
 				frogatto.scripted_move_to_x(500, -1, def()->commands fire_event(me, 'script7') )
 			] where frogatto = (obj frogatto_playable <- level.player)",
-
 			"on_script7": "[set(level.player.facing, -1),
 							speech_dialog(
 												set(level.player.animation, 'emote_confused'),
@@ -170,15 +167,11 @@
 
 											),schedule(60, fire_event(me,'script8'))
 			] where frogatto = (obj frogatto_playable <- level.player)",
-											
-											
 			"on_script8": "[set(level.player.facing, 1),
 							speech_dialog(
 												set(level.player.animation, 'emote_oh'),
 								level.player,	[~We jinxed it.\\nDidn't we?~],
 											),schedule(60, fire_event(me,'script9'))]",
-
-
 			"on_script9": "[
 								set(level.zoom, 1),
 								spawn('moth_boss.perched', 680, -1024, 1, [schedule(300, die())]),
@@ -258,8 +251,8 @@
 			"custom": true,
 			"label": "_966d4c5",
 			"type": "ivy_foreground1",
-			"x": 317,
-			"y": -342
+			"x": 304,
+			"y": -320
 		},
 		{
 			"_uuid": "fb7fc0459abb4051981ee1e9f8143f39",
@@ -276,8 +269,8 @@
 			"custom": true,
 			"label": "_27d89e02",
 			"type": "ivy_foreground1",
-			"x": 873,
-			"y": -332
+			"x": 875,
+			"y": -316
 		},
 		{
 			"_uuid": "6158b64e34e9455b9ce71787f4af12f9",
@@ -285,8 +278,8 @@
 			"custom": true,
 			"label": "_fc18017",
 			"type": "ivy_foreground2",
-			"x": 702,
-			"y": -351
+			"x": 704,
+			"y": -336
 		},
 		{
 			"_uuid": "f64c3191a2764bb088c83854742a1c15",
@@ -308,8 +301,8 @@
 				"linked_object": "camera2",
 				"passepartout": "standard",
 				"path": [
-					[352,-416],
-					[528,-592],
+					[448,-352],
+					[672,-576],
 					[662,-848]
 				],
 				"release_control": false,
@@ -555,8 +548,8 @@
 ,
 ,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
 ,,,,,,,,,,,,,,,,,,,,,,,frg,frg,frg,frg
-,,,,,,frg,frg,frg,frg,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg
-,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
+,,,,,frg,frg,,,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg,,,,,,,,,,,,,frg,frg,frg,frg,frg,frg
+,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
 ,,,,,,,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg,frg
@@ -683,16 +676,6 @@
 			"zorder": "wooden_scaffolding_background"
 		},
 		{
-			"tiles": "",
-			"unique_tiles": "",
-			"variations": "",
-			"x": 0,
-			"x_speed": 100,
-			"y": 0,
-			"y_speed": 100,
-			"zorder": "rail_tracks"
-		},
-		{
 			"tiles": ",,,,,,,,,,,,,,,,,,,,,lfm,lfm
 ,,,,,,,,,,,,,,,,,,lfm,lfm,lfm,lfm,,,lfm,lfm,,,,,lfm,lfm
 ,,,,,,,,,,,,,,lfm,lfm,,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,lfm,,,,lfm,lfm
@@ -789,7 +772,7 @@
 			"x_speed": 100,
 			"y": 0,
 			"y_speed": 100,
-			"zorder": "foliage_background"
+			"zorder": "player"
 		},
 		{
 			"tiles": "",
@@ -898,40 +881,7 @@
 			"zorder": "forest_leaves_foreground"
 		},
 		{
-			"tiles": ",
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
-,
+			"tiles": ",,,,,,,,,,fug,fug,fug,,,,,,,,,,,,,,,,,,,,fug,fug,fug
 ,
 ,
 ,
@@ -940,11 +890,11 @@
 ,
 ,
 ,",
-			"unique_tiles": "",
+			"unique_tiles": ",fug",
 			"variations": "",
 			"x": 0,
 			"x_speed": 100,
-			"y": -320,
+			"y": -288,
 			"y_speed": 100,
 			"zorder": "foliage_foreground"
 		},
