Attempted to plug the issue with the moth boss forcing the player to endure the whole cutscene every time they die.

--- a/data/level/Forest/moth-boss.cfg
+++ b/data/level/Forest/moth-boss.cfg
@@ -167,7 +167,9 @@
 
 											),schedule(60, fire_event(me,'script8'))
 			] where frogatto = (obj frogatto_playable <- level.player)",
-			"on_script8": "[set(level.player.facing, 1),
+			"on_script8": "[
+							set(level.player.facing, 1),
+						    checkpoint_game(),
 							speech_dialog(
 												set(level.player.animation, 'emote_oh'),
 								level.player,	[~We jinxed it.\\nDidn't we?~],
