Kinda crudely grafted the wind-stream particles into the moth boss; at least to the point where they're working.  Nominally.

--- a/data/particles/wind_stream.cfg
+++ b/data/particles/wind_stream.cfg
@@ -64,7 +64,11 @@
 			"box_height": 400.0,
 			"box_width": 100.0,
 			"can_be_deleted": false,
-			"emission_rate": 2000.0,
+			"emission_rate": {
+				"max": 2000.0,
+				"min": 1800.0,
+				"type": "random"
+			},
 			"emit_only_2d": true,
 			"mass": 1.0,
 			"name": "emit_object_92",
@@ -85,6 +89,10 @@
 				"min": 30.0,
 				"type": "random"
 			}
+		},
+		"fast_forward": {
+			"interval": 0.05,
+			"time": 6.5
 		},
 		"name": "wind_stream",
 		"order": 0,
