--- a/data/objects/enemies/bosses/moth_boss.cfg
+++ b/data/objects/enemies/bosses/moth_boss.cfg
@@ -50,7 +50,14 @@ properties: {
 
 	
 	#-------------------------- general functions --------------------------#
-	setup: "[	if(lower_difficulty, set(max_hitpoints, 2400)) ]",	
+	setup: "[
+		[
+			if(lower_difficulty, set(max_hitpoints, 2400)),
+			add_object(wind_stream_particles),
+		]
+		;
+		setup_particles
+	]",	
 	
 	try_facing: "def(int direction) -> commands if(direction != facing,fire_event('turn'))",
 	
@@ -174,6 +181,50 @@ properties: {
 			 	where gust_direction = wind_gust_direction
 			 ",
 	wind_gust_direction: "int :: if(mid_x > _x_bound + (_x2_bound - _x_bound)/2, 1, -1)",
+
+
+
+	wind_stream_particles: { 
+		type: "obj particle_attache", 
+		init: "object('particle_attache', x,y, {
+			_particle_type:'wind_stream', //Silence check for this existing. `particles`, which this sets, is overwritten later.
+			parent: me,
+			time_to_die: 0,
+			x:x, y:y,
+			zorder: lib.zorder.get('liquid_particle_effects'),
+		})",
+		persistent: false,
+	},
+
+	setup_particles: "commands :: [
+		set(wind_stream_particles.clip_area, [_x_bound-mid_x, _y_bound-mid_y, _x2_bound - _x_bound, _y2_bound - _y_bound, ]),
+		set(wind_stream_particles.particles, (
+			raw_particle_system_info + {
+				position: [
+					(_x_bound + _x2_bound)/2 - mid_x, //Horizontal offset of particle system as wide as the water, to handle when the emitter object isn't square within the bounds of the water.
+					_y2_bound - mid_y, //Position the center point (of the box emitter) at the bottom of the body of water.
+					0
+				],
+				fast_forward: (map <- raw_particle_system_info.fast_forward) + {
+					time: bubble_average_lifetime, //Pump the water full of bubbles when we first encounter it.
+				},
+				emitter: (map <- raw_particle_system_info.emitter) + {
+					time_to_live: bubble_average_lifetime, //Make the bubbles live until the top of the water.
+					box_width: _x2_bound - _x_bound, //Make the bubbles as wide as the water. (To position the bubbles, see `position` above.)
+					emission_rate: (map <- (map <- raw_particle_system_info.emitter).emission_rate) + {
+						max: (_x2_bound - _x_bound) / 20, //Particle density. (Particles per pixel of water surface, divided by 2 on average because random floor is 0.)
+					}
+				},
+			} where
+				raw_particle_system_info = 
+					(ParticleSystemInfo <- get_document('data/particles/wind_stream.cfg')).info,
+				bubble_average_lifetime = 
+					(_y2_bound - _y_bound) / average_vertical_bubble_speed / 60/*fps*/
+					where average_vertical_bubble_speed = 0.65 //as experimentally verified ([DDR 2020-40-24] 0.6 is actually more proper, but I like the bubbles disappearing before they hit the surface sometimes.)
+		)),
+	]",
+
+
 
 
 #---- lay egg ----#
